--- a/Timetables.Rmd
+++ b/Timetables.Rmd
@@ -10,10 +10,9 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 suppressPackageStartupMessages(library(tidyverse))
 ```
 
-```{r pressure, echo=FALSE}
+```{r pressure, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 dt=read_tsv("TimetableForWeb.txt")
-dt <- arrange(dt)
-head(dt,1000)
+knitr::kable(dt)
 #data(mtcars)
 #rpivotTable::rpivotTable(dt,rows="Day", cols=c("TimeSlots"),width="100%", height="400px")
 ```
